--- a/Web.config
+++ b/Web.config
@@ -7,7 +7,7 @@
   <system.web>
 	  <sessionState mode="InProc" timeout="1"/>
 	  
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="false" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
 
 	  <customErrors mode="On" defaultRedirect="~/CustomError/GenericError.html" >
@@ -23,7 +23,14 @@
     </compilers>
   </system.codedom>
 
-
+	<system.webServer>
+		<httpProtocol>
+			<customHeaders>
+				<add name="X-Frame-Options" value="SAMEORIGIN" />
+			</customHeaders>
+		</httpProtocol>
+	</system.webServer>
+	
 	<appSettings>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 	</appSettings>
@@ -31,5 +38,7 @@
 
 	<connectionStrings>
 		<add name="MyDBConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ASMyDB.mdf;Initial Catalog=ASMyDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="mailAccount" connectionString="nyp202503e@gmail.com" />
+		<add name="mailPassword" connectionString="Passw0rd123!" />
 	</connectionStrings>
 </configuration>
